[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://entities/NPC/Zombie_Heavy_2D.gd" id="1_heavy"]
[ext_resource type="Script" path="res://common/Perception/Vision2D.gd" id="2_vision2d"]
[ext_resource type="Script" path="res://common/Perception/Hearing2D.gd" id="3_hearing2d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_heavy"]
animations = [{
"frames": [],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(40, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_detection"]
size = Vector2(180, 110)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_attack"]
size = Vector2(60, 80)

[node name="Zombie_Heavy_2D" type="CharacterBody2D"]
script = ExtResource("1_heavy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_heavy")
animation = &"idle"

[node name="ZombieVisual" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -36.0
offset_right = 20.0
offset_bottom = 36.0
color = Color(0.25, 0.45, 0.3, 1.0)

[node name="ZombieLabel" type="Label" parent="ZombieVisual"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = 8.0
text = "HEAVY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_body")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_detection")

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_attack")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -25.0
offset_top = -48.0
offset_right = 25.0
offset_bottom = -38.0
max_value = 140.0
value = 140.0
show_percentage = false

[node name="Vision2D" type="Node" parent="."]
script = ExtResource("2_vision2d")

[node name="Hearing2D" type="Node" parent="."]
script = ExtResource("3_hearing2d")
